--- a/ott_be/appone/templates/layout/app_layout.html
+++ b/ott_be/appone/templates/layout/app_layout.html
@@ -14,10 +14,10 @@
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <h1 class="navbar-brand text-white fs-2">Movie Time</h1>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse justify-content-end">
+          </button>      
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active text-white" aria-current="page" href="http://127.0.0.1:8000//movielist/">Manage Movies</a>
